--- a/css/about.css
+++ b/css/about.css
@@ -50,3 +50,9 @@ article li {
   font-weight: 800;
   color: #000;
 }
+
+@media screen and (max-width: 480px) {
+  .about-image {
+    width: 90vw;
+  }
+}
