--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 #root {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   color: #333;
 }
 
@@ -16,11 +16,11 @@ section {
   float: left;
 }
 .main-title {
-  font-size: 70px;
+  font-size: 4.3rem;
 }
 .main-subtitle {
   margin-top: 16px;
-  font-size: 28px;
+  font-size: 1.75rem;
 }
 
 .dev-image {
@@ -45,4 +45,14 @@ section {
 .resume a:hover {
   background: #e5e5e5;
   border: 2px solid #86f0b9;
+}
+
+@media screen and (max-width: 480px) {
+  .dev-image {
+    margin-right: 0;
+  }
+  .dev-image img {
+    width: 90%;
+    object-fit: contain;
+  }
 }
