--- a/css/contact.css
+++ b/css/contact.css
@@ -1,11 +1,12 @@
 #root {
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
 }
 
 .contact-container {
   display: flex;
-  flex-shrink: inherit;
+  margin: 1%;
   align-items: center;
   justify-content: center;
 }
@@ -14,6 +15,7 @@
   border: 4px solid #333;
   width: max-content;
   height: max-content;
+  overflow: hidden;
 }
 
 .message-container div {
@@ -32,13 +34,15 @@
   border: 1px solid #fff;
   border-radius: 4px;
   outline: none;
-  font-size: 20px;
+  font-size: 1.25rem;
   font-weight: 400;
   margin: 8px 0 0 0;
 }
 
 textarea {
   resize: none;
+  height: 80%;
+  width: 80%;
   /* padding: 0 24px; */
 }
 
@@ -55,7 +59,7 @@ label {
 .submit-button {
   font-weight: 600;
   padding: 12px;
-  font-size: 24px;
+  font-size: 1.5rem;
   color: #333;
   background: #86f0b9;
   justify-content: center;
@@ -73,4 +77,13 @@ label {
 
 .input-empty-error {
   border: 2px solid red;
+}
+
+@media screen and(max-width:480px) {
+  .contact-container {
+    width: 80vw;
+  }
+  #guestMessage {
+    resize: vertical;
+  }
 }
